# rememberPWD

./: .gitignore  LICENSE  README.en.md  README.md  build.bat  clear-icon-cache.bat  fix-shortcut-icon-admin.bat  fix-shortcut-icon.ps1  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  api.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: generate_icon.py  icon.icns
src-tauri/src/: commands.rs  crypto.rs  db.rs  main.rs
src/components/: AccountForm.tsx  AccountList.tsx  AuthScreen.tsx  ConfirmModal.tsx  CsvExportModal.tsx  CsvImportModal.tsx  FloatingBar.tsx  Panel.tsx  SettingsModal.tsx  SideGrip.tsx
