[package]
name = "remember-password-manager"
version = "1.0.0"
description = "本地密码管理器"
authors = ["user"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
dirs = "5"
encoding_rs = "0.8"
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
once_cell = "1"
thiserror = "1"
single-instance = "0.3.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
